# HD_CPUAD

./: README.md
Assigments/01/Abgabe/: main-121.cpp
Assigments/01/code/: main-122.cpp  main-123.cpp
Assigments/01/latex/: format.tex  main.aux  main.bcf  main.fdb_latexmk  main.fls  main.tex  preamble.fdb_latexmk  preamble.tex
Assigments/02/: ssh-commands
Assigments/02/code/: CMakeCache.txt  CMakeLists.txt  SIMD_reduce.hpp  SIMD_reduceV_bench.cpp  SIMD_reduce_bench.cpp  SIMD_reduce_view.hpp  SIMD_transform.hpp  SIMD_transformV_bench.cpp  SIMD_transform_bench.cpp  SIMD_transform_view.hpp  ex02SlurmScript.sh  load_env_CPUAD.sh  main_SIMD_reduce.cpp  main_SIMD_transform.cpp  plotRes.py  simd_reduceVX_output.txt  simd_reduceV_output.txt  simd_reduce_output.txt  simd_transformVX_output.txt  simd_transformV_output.txt  simd_transform_output.txt  start_SIMDreduce.sh  start_SIMDreduceV.sh  start_SIMDtransform.sh  start_SIMDtransformV.sh  transformV_results_final.txt
Assigments/02/latex/: commands.tex  format.tex  main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.run.xml  main.tex  preamble.fdb_latexmk  preamble.fls  preamble.tex
Assigments/03/: ssh-commands
Assigments/03/code/: CMakeLists.txt  UNROLLFACTOR.h  benchUnrollFactor.cpp  benchmarker.hpp  ex03BenchmarkScript.sh  ex03SlurmScript.sh  reduceV_Unroll_bench.cpp  reduce_LoopUnrolling.hpp  reduce_LoopUnrolling_view.hpp  reduce_Unroll_bench.cpp  reduce_Unroll_main.cpp  sol_reduce_LoopUnrolling_view.hpp  sol_transform_LoopUnrolling_view.hpp  transformV_Unroll_bench.cpp  transform_LoopUnrolling.hpp  transform_LoopUnrolling_view.hpp  transform_Unroll_bench.cpp  transform_Unroll_main.cpp  unrollScript.sh  utilities.hpp
Assigments/03/code/plot/: plotRes.py  transform_results.csv
Assigments/03/latex/: main.aux  main.bcf  main.fdb_latexmk  main.fls  main.tex
Assigments/03/res/: program_128.txt  program_160.txt  program_224.txt  program_256.txt  program_8.txt  program_96.txt  reduce_results.csv  transform_results.csv
